logout; config setup

--- a/client/src/app/components/main-chat/main-chat.component.html
+++ b/client/src/app/components/main-chat/main-chat.component.html
@@ -1,4 +1,6 @@
 <div class="home">
 	<h1>Imperial Tobacco home page</h1>
 	<h3>Hello, {{user.username}}</h3>
+
+	<button (click)="onLogOut()" mat-raised-button color="primary">Logout</button>
 </div>
