--- a/client/src/app/components/main-chat/main-chat.component.css
+++ b/client/src/app/components/main-chat/main-chat.component.css
@@ -101,7 +101,24 @@
 }
 
 .field {
+  display: flex;
+  flex-direction: column;
   height: 100%;
   background-color: #fff;
   margin: 70px;
+}
+
+.mat-table {
+  overflow: auto;
+  max-height: 100%;
+}
+
+.tags {
+  height: 80px;
+  width: 100%;
+}
+
+.tags .mat-form-field, .tags input.mat-chip-input{
+  width: 100% !important;
+  margin: 0;
 }
