--- a/client/src/app/components/main-chat/main-chat.component.html
+++ b/client/src/app/components/main-chat/main-chat.component.html
@@ -66,10 +66,21 @@
 		</div>
 
 		<div class="field" *ngIf="showTable">
+			<div class="download-buttons">
+				<button mat-raised-button color="primary" (click)="getExcelFile()">XLS</button>
+				<button mat-raised-button color="primary" (click)="getPDFFile()">PDF</button>
+			</div>
+			<!-- <a href="/excel">Excel</a> -->
+
 			<mat-paginator #paginator [pageSize]="20" [pageSizeOptions]="[5, 10, 20, 50]">
 			</mat-paginator>
 
-			<mat-table #table [dataSource]="dataSource">
+			<mat-table id="table" #table [dataSource]="dataSource">
+
+				<ng-container matColumnDef="check">
+					<mat-header-cell *matHeaderCellDef [ngClass]="'checkbox-cell'"> # </mat-header-cell>
+					<mat-cell *matCellDef="let element" [ngClass]="'checkbox-cell'"><input type="checkbox" (change)="check($event, element)"></mat-cell>
+				</ng-container>
 
 				<ng-container matColumnDef="name">
 					<mat-header-cell *matHeaderCellDef> Name of the brand </mat-header-cell>
