--- a/client/src/app/components/main-chat/main-chat.component.css
+++ b/client/src/app/components/main-chat/main-chat.component.css
@@ -55,7 +55,7 @@
 }
 
 .menu-buttons {
-  margin-top: 100px;
+  margin-top: 30px;
   width: 50%;
   display: flex;
   flex-direction: column;
@@ -105,7 +105,7 @@
   flex-direction: column;
   height: 100%;
   background-color: #fff;
-  margin: 50px 50px 50px 50px;
+  margin: 7px;
 }
 
 .mat-table {
@@ -124,7 +124,7 @@
 }
 
 .checkbox-cell {
-  flex: 0 0 75px;
+  flex: 0 0 28px;
 }
 
 .download-buttons {
@@ -134,4 +134,13 @@
 
 .download-buttons button {
   margin-right: 7px;
+}
+
+
+.mat-header-row, .mat-row {
+  min-height: 30px;
+}
+
+/deep/.mat-checkbox-layout {
+  color: #fff !important;
 }
