--- a/client/src/app/components/main-chat/main-chat.component.html
+++ b/client/src/app/components/main-chat/main-chat.component.html
@@ -23,7 +23,7 @@
 		<div class="picker" *ngIf="!showTable">
 			<div class="picker-inputs">
 				<mat-form-field>
-					<mat-select placeholder="Choose platform" [(value)]="selectedPlatform" [formControl]="platformControl" required>
+					<mat-select placeholder="Choose platform" [(ngModel)]="selectedPlatform" [formControl]="platformControl" required>
 						<mat-option>--</mat-option>
 						<mat-option *ngFor="let platform of platforms" [value]="platform">{{platform}}</mat-option>
 					</mat-select>
@@ -83,7 +83,7 @@
 						<mat-checkbox [checked]="allSelected" color="primary" (change)="checkAll($event.checked)">A</mat-checkbox>
 					</mat-header-cell>
 					<mat-cell *matCellDef="let element" [ngClass]="'checkbox-cell'">
-						<mat-checkbox [checked]="element.selected" color="primary" (change)="check($event, element)">a</mat-checkbox>
+						<mat-checkbox [checked]="element.selected" color="primary" (click)="$event.preventDefault()">a</mat-checkbox>
 					</mat-cell>
 				</ng-container>
 
@@ -98,7 +98,7 @@
 				</ng-container>
 
 				<mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-				<mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+				<mat-row *matRowDef="let row; columns: displayedColumns;" (click)="check(row)" class="pointer"></mat-row>
 			</mat-table>
 		</div>
 	</div>
