--- a/client/src/app/components/main-chat/main-chat.component.css
+++ b/client/src/app/components/main-chat/main-chat.component.css
@@ -9,6 +9,7 @@
   height: 100%;
   display: flex;
   flex-direction: column;
+  flex-shrink: 0;
 }
 
 .name, .user, .center-wrapper header, .picker {
@@ -109,7 +110,9 @@
 }
 
 .mat-table {
-  overflow: auto;
+  overflow-y: auto;
+  overflow-x: hidden;
+  height: 100%;
   max-height: 100%;
 }
 
@@ -170,4 +173,26 @@
 
 mat-slide-toggle {
   margin-right: 20px;
+}
+
+
+#preview {
+  margin-top: 30px;
+  height: 100%;
+  overflow-y: auto;
+}
+
+#preview .row {
+  /* margin-bottom: 40px; */
+  /* padding: 7px; */
+}
+
+th, td {
+  padding-right: 20px;
+  box-sizing: border-box;
+}
+
+.line {
+  width: 99%;
+  border: 3px solid black;
 }
