--- a/client/src/app/components/main-chat/main-chat.component.css
+++ b/client/src/app/components/main-chat/main-chat.component.css
@@ -184,15 +184,14 @@ mat-slide-toggle {
 
 #preview .row {
   /* margin-bottom: 40px; */
-  /* padding: 7px; */
+  padding: 10px;
 }
 
 th, td {
-  padding-right: 20px;
-  box-sizing: border-box;
+  width: 7%;
+  text-align: center;
 }
-
-.line {
-  width: 99%;
-  border: 3px solid black;
+table, th, td {
+  border: 1px solid black;
+  border-collapse: collapse;
 }
