--- a/client/src/app/components/main/main.component.css
+++ b/client/src/app/components/main/main.component.css
@@ -89,3 +89,18 @@
   background-color: #fff;
   height: 50px;
 }
+
+#loading {
+  display: none;
+  flex-direction: column;
+	justify-content: center;
+	align-items: center;
+  width: 100%;
+  height: 100%;
+	background-color: rgba(0, 0, 0, 0.3);
+
+	position: absolute;
+	/* top: 0;
+	left: 0; */
+	z-index: 999;
+}
