--- a/client/src/app/components/main/main.component.html
+++ b/client/src/app/components/main/main.component.html
@@ -1,3 +1,8 @@
+<div id="loading">
+	<h1>Please wait, we are preparing...</h1>
+	<mat-spinner></mat-spinner>
+</div>
+
 <div id="main-wrapper">
 	<div id="left-menu">
 		<div class="name">PRICE BOX DISPLAY</div>
@@ -23,132 +28,5 @@
 		<picker (onSubmit)="submit($event)" *ngIf="!showTable"></picker>
 
 		<brands-table [platform]="platform" [month]="month" [year]="year" *ngIf="showTable"></brands-table>
-
-		<!-- <div class="picker" *ngIf="!showTable">
-			<div class="picker-inputs">
-				<mat-form-field>
-					<mat-select placeholder="Choose platform" [(ngModel)]="selectedPlatform" [formControl]="platformControl" required>
-						<mat-option>--</mat-option>
-						<mat-option *ngFor="let platform of platforms" [value]="platform">{{platform}}</mat-option>
-					</mat-select>
-					<mat-error *ngIf="platformControl.hasError('required')">Please choose a platform</mat-error>
-				</mat-form-field>
-
-				<mat-form-field>
-					<input placeholder="Choose month" 
-						   matInput 
-						   mode="month" 
-						   name="someName" 
-						   [(ngModel)]="selectedMonth" 
-						   [dpDayPicker]="config" 
-						   theme="dp-material"
-						   required="true" />
-				</mat-form-field>
-			</div>
-
-			<button mat-raised-button color="primary" (click)="submit()">Submit</button>
-		</div> -->
-
-
-
-		<!-- <div class="tags" *ngIf="showTable">
-			<mat-form-field floatPlaceholder="never">
-				<mat-chip-list #chipList>
-					<mat-chip *ngFor="let value of tags" (remove)="removeStatus(value)">
-						{{value}} <mat-icon matChipRemove>cancel</mat-icon>
-					</mat-chip>
-				</mat-chip-list>
-
-				<input #statusInput 
-				matChipInputAddOnBlur="true" [matChipInputFor]="chipList" [matAutocomplete]="auto" placeholder="Start typing...">
-				
-				<mat-autocomplete #auto="matAutocomplete" (optionSelected)="addStatus($event); statusInput.value=''">
-					<mat-option *ngFor="let brand of allBrands | filter: statusInput.value: allBrands | unique: filteredBrands" [value]="brand.name">
-						<span>{{ brand.name }}</span>
-					</mat-option>
-				</mat-autocomplete>
-			</mat-form-field>
-		</div>
-
-		<div class="field" *ngIf="showTable">
-			<div class="download-buttons">
-				<button mat-raised-button color="primary" (click)="getExcelFile()">Excel</button>
-				<button mat-raised-button color="primary" (click)="getPDFFile()">PDF</button>
-			</div>
-
-			<mat-paginator #paginator [pageSize]="20" [pageSizeOptions]="[5, 10, 20, 50]">
-			</mat-paginator>
-
-
-			<mat-table [ngClass]="{'small': checkedRows.length}" id="table" #table [dataSource]="dataSource">
-
-				<ng-container matColumnDef="check">
-					<mat-header-cell *matHeaderCellDef [ngClass]="'checkbox-cell'">
-						<mat-checkbox [checked]="allSelected" color="primary" (change)="checkAll($event.checked)">A</mat-checkbox>
-					</mat-header-cell>
-					<mat-cell *matCellDef="let element" [ngClass]="'checkbox-cell'">
-						<mat-checkbox [checked]="element.selected" color="primary" (click)="$event.preventDefault()">a</mat-checkbox>
-					</mat-cell>
-				</ng-container>
-
-				<ng-container matColumnDef="name">
-					<mat-header-cell *matHeaderCellDef> Name of the brand </mat-header-cell>
-					<mat-cell *matCellDef="let element"> {{element.name}} </mat-cell>
-				</ng-container>
-
-				<ng-container matColumnDef="quantity">
-					<mat-header-cell *matHeaderCellDef> Quantity </mat-header-cell>
-					<mat-cell *matCellDef="let element"> {{element.quantity}} </mat-cell>
-				</ng-container>
-
-				<mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-				<mat-row *matRowDef="let row; columns: displayedColumns;" (click)="onCheckboxChange(row)" class="pointer"></mat-row>
-			</mat-table>
-			
-			<div *ngIf="checkedRows.length" id="preview">
-				<div *ngFor="let row of checkedRows.slice(0, 15)" class="row">
-
-					<div class="brand-info">
-						<div class="brand-name">
-							<h2>Brand</h2>
-							<span>{{row.name}}</span>
-						</div>
-
-						<div class="description">
-							<h2>Description</h2>
-							<div [innerHTML]="row.description"></div>
-						</div>
-					</div>
-
-					<div class="items">
-						<h2>Items</h2>
-						<table>
-							<tr>
-								<th>Code</th>
-								<th>Name</th>
-								<th>Length</th>
-								<th>Ring</th>
-								<th>Shade</th>
-								<th>Quantity</th>
-								<th>MSRP</th>
-								<th>Jrprice</th>
-							</tr>
-							<tr *ngFor="let item of row.items">
-								<td>{{item.code}}</td>
-								<td>{{item.name}}</td> 
-								<td>{{item.details.length}}</td>
-								<td>{{item.details.ring}}</td>
-								<td>{{item.details.wrapper_shade}}</td> 
-								<td>{{item.details.packaging_details.quantity}}</td>
-								<td>{{item.prices.msrp}}</td>
-								<td>{{item.prices.jr_price}}</td> 
-							</tr>
-						</table>
-					</div>
-
-					<div class="html2pdf__page-break"></div>
-				</div>
-			</div>
-		</div> -->
 	</div>
 </div>
