--- a/client/src/app/components/main/main.component.html
+++ b/client/src/app/components/main/main.component.html
@@ -27,6 +27,6 @@
 
 		<picker (onSubmit)="submit($event)" *ngIf="!showTable"></picker>
 
-		<brands-table [platform]="platform" [month]="month" [year]="year" *ngIf="showTable"></brands-table>
+		<!-- <brands-table [platform]="platform" [month]="month" [year]="year" *ngIf="showTable"></brands-table> -->
 	</div>
 </div>
