--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,1 +1,30 @@
-<router-outlet></router-outlet>
+<div id="loading">
+	<h1>Please wait, we are preparing...</h1>
+	<mat-spinner></mat-spinner>
+</div>
+
+<div id="main-wrapper">
+	<div id="left-menu" *ngIf="isAuth$ | async">
+		<div class="name">PRICE BOX DISPLAY</div>
+		<div class="user">
+			<div class="user-wrapper">
+				<span>Admin</span>
+				<span>Administrator</span>
+			</div>
+			<span></span>
+		</div>
+		<div class="menu">
+			<div class="menu-buttons">
+				<button mat-button (click)="home()">Home</button>
+				<button (click)="logOut()" mat-button>Logout</button>
+			</div>
+		</div>
+		<div class="footer"></div>
+	</div>
+
+	<div class="center-wrapper">
+		<header></header>
+
+		<router-outlet></router-outlet>
+	</div>
+</div>
