--- a/client/src/app/components/brands-table/brands-table.component.html
+++ b/client/src/app/components/brands-table/brands-table.component.html
@@ -83,12 +83,12 @@
 					<tr *ngFor="let item of row.items">
 						<td>{{item.code}}</td>
 						<td>{{item.name}}</td> 
-						<td>{{item.details.length}}</td>
-						<td>{{item.details.ring}}</td>
-						<td>{{item.details.wrapper_shade}}</td> 
-						<td>{{item.details.packaging_details.quantity}}</td>
-						<td>{{item.prices.msrp}}</td>
-						<td>{{item.prices.jr_price}}</td> 
+						<td>{{item.length}}</td>
+						<td>{{item.ring}}</td>
+						<td>{{item.shade}}</td> 
+						<td>{{item.quantity}}</td>
+						<td>{{item.msrp}}</td>
+						<td>{{item.jr_price}}</td> 
 					</tr>
 				</table>
 			</div>
