--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -20,9 +20,9 @@
 				<!-- <span></span> -->
 			</div>
 
-			<!-- <div class="menu"></div>
-		
-		<div class="footer"></div> -->
+			<div class="menu">
+				<button mat-raised-button  (click)="home()">Home</button>
+			</div>
 		</div>
 
 		<div class="center-wrapper">
