--- a/client/src/app/components/brands-table/brands-table.component.css
+++ b/client/src/app/components/brands-table/brands-table.component.css
@@ -94,10 +94,6 @@
 	margin: 0 0 8px 8px !important;
 }
 
-mat-slide-toggle {
-	margin-right: 20px;
-}
-
 
 #preview {
 	margin-top: 5px;
@@ -110,7 +106,7 @@ mat-slide-toggle {
 }
 
 th, td {
-	width: 7%;
+	padding: 5px;
 	text-align: center;
 }
 table, th, td {
