--- a/client/src/app/components/picker/picker.component.css
+++ b/client/src/app/components/picker/picker.component.css
@@ -11,7 +11,7 @@
 }
 
 
-.mat-raised-button {
+/* .mat-raised-button {
 	color: #fff;
 	background-color: #817F7F;
 }
@@ -20,4 +20,4 @@
 	color: #fff;
 	background-color: #696767;
 	transition: 0.3s;
-}
+} */
