--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -11,7 +11,9 @@
 	<div id="content-wrapper">
 		<div id="left-menu" *ngIf="isAuth$ | async">
 			<div class="name">
-				<img src="../assets/images/logo.png" alt="" (click)="home()" class="logo" width="200px"> PRICE BOX DISPLAY
+				<img src="../assets/images/logo.png" alt="" (click)="home()" class="logo" width="200px">
+				<span class="border"></span>
+				<p>PRICE BOX DISPLAY</p>
 			</div>
 			<div class="user">
 				<!-- <div class="user-wrapper"> -->
