--- a/client/src/app/components/brands-table/brands-table.component.html
+++ b/client/src/app/components/brands-table/brands-table.component.html
@@ -70,17 +70,17 @@
 			<div class="items">
 				<h2>Items</h2>
 				<table>
-					<!-- <tr>
+					<tr>
 						<th>Code</th>
-						<th>Name</th>
-						<th>Length</th>
+						<th></th>
+						<!-- <th>Length</th>
 						<th>Ring</th>
-						<th>Shade</th>
+						<th>Shade</th> -->
 						<th>Quantity</th>
 						<th>MSRP</th>
 						<th>Jrprice</th>
 						<th>5 pack price</th>
-					</tr> -->
+					</tr>
 					<tr *ngFor="let item of row.items">
 						<td>{{item.code}}</td>
 						<td>{{item.name}} • {{item.shade}}, {{item.length}} x {{item.ring}}</td> 
